# medsafe

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  plan.md
.claude/tasks/: WEEK1_FOUNDATION.md  WEEK2_RAG_PIPELINE.md  WEEK3_INTERACTION_ENGINE.md  WEEK4_ORCHESTRATOR_MCP.md  WEEK5_FAERS_SYMPTOMS.md
backend/: pyproject.toml
backend/api/: analysis.py  briefing.py  medications.py  rag.py
backend/app/: config.py  main.py
backend/db/: client.py  interactions.py
backend/eval/runners/: eval_interactions.py
backend/eval/test_sets/: interaction_pairs.json
backend/guardrails/: input_guards.py  output_guards.py
backend/models/: analysis.py  briefing.py  interaction.py  medication.py  retrieval.py
backend/orchestrator/: briefing_generator.py  classifier.py  orchestrator.py
backend/rag/: ingest.py  reranker.py  retriever.py
backend/scripts/: ingest_dailymed.py  ingest_drugbank.py  ingest_nih_ods.py
backend/tools/: interaction_checker.py  normalizer.py  openfda.py  rxnorm.py  symptom_attributor.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: analysis.ts  briefing.ts  medications.ts
frontend/src/components/ConfirmMedications/: index.tsx
frontend/src/components/InteractionTable/: index.tsx
frontend/src/components/MedicationInput/: index.tsx
frontend/src/components/SafetyBriefing/: index.tsx
frontend/src/store/: sessionStore.ts
frontend/src/types/: index.ts
mcp_server/: mcp_tools.py  prompts.py  resources.py  server.py
scripts/: generate_architecture_diagram.py
(+1 files in other folders)
