[project]
name = "medsafe-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.*",
    "uvicorn[standard]==0.34.*",
    "pydantic==2.*",
    "pydantic-settings==2.*",
    "httpx==0.28.*",
    "python-dotenv==1.*",
    "chromadb==0.6.*",
    "openai==1.*",
    "rank-bm25==0.2.*",
    "asyncpg==0.30.*",
    "lxml==5.*",
    "aiofiles==24.*",
    "beautifulsoup4==4.*",
]

[project.optional-dependencies]
dev = [
    "pytest==8.*",
    "pytest-asyncio==0.24.*",
    "httpx",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "api*", "models*", "tools*", "guardrails*", "orchestrator*", "rag*", "eval*", "scripts*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["../tests"]
